--- a/notebooks/city_bikes.ipynb
+++ b/notebooks/city_bikes.ipynb
@@ -83,6 +83,7 @@
     }
    ],
    "source": [
+    "#Getting the vancouver network from the citybikes json request\n",
     "filtered_network = [network for network in networks if network['location']['city'] == city]\n",
     "print(filtered_network)"
    ]
@@ -109,6 +110,7 @@
     }
    ],
    "source": [
+    "#printing a test L & L\n",
     "print('Longitude: ' + str(filtered_network[0]['location']['longitude']))\n",
     "print('Latitude: ' + str(filtered_network[0]['location']['latitude']))"
    ]
@@ -140,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#add the specific vancouver network id to the URL for the get request\n",
     "url = \"http://api.citybik.es\"\n",
     "id = network_id\n",
     "response1 = requests.get(url + id)"
