--- a/notebooks/joining_data.ipynb
+++ b/notebooks/joining_data.ipynb
@@ -1340,7 +1340,7 @@
     }
    ],
    "source": [
-    "#full_join.fillna({'rating': 0}, inplace=True)\n",
+    "#rating has 30 values that are empty. I have decided to fill them with zero values\n",
     "full_join['rating'] = full_join['rating'].fillna(0)\n",
     "full_join.info()"
    ]
