--- a/notebooks/model_building.ipynb
+++ b/notebooks/model_building.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "[857 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,8 +193,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple linear regression: Distance vs # of free bikes available"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,6 +455,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple linear regression: Rating vs # of free bikes available"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -508,6 +522,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simple linear regression: distance vs rating"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -555,11 +576,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Multiple linear regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:             free_bikes   R-squared:                       0.027\n",
+      "Model:                            OLS   Adj. R-squared:                  0.024\n",
+      "Method:                 Least Squares   F-statistic:                     11.71\n",
+      "Date:                Thu, 16 May 2024   Prob (F-statistic):           9.65e-06\n",
+      "Time:                        05:56:16   Log-Likelihood:                -2791.7\n",
+      "No. Observations:                 857   AIC:                             5589.\n",
+      "Df Residuals:                     854   BIC:                             5604.\n",
+      "Df Model:                           2                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const          7.0389      0.995      7.077      0.000       5.087       8.991\n",
+      "distance       0.0044      0.001      4.814      0.000       0.003       0.006\n",
+      "rating         0.0104      0.119      0.087      0.931      -0.224       0.244\n",
+      "==============================================================================\n",
+      "Omnibus:                       62.552   Durbin-Watson:                   0.565\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               74.941\n",
+      "Skew:                           0.720   Prob(JB):                     5.33e-17\n",
+      "Kurtosis:                       3.157   Cond. No.                     2.00e+03\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The condition number is large,  2e+03. This might indicate that there are\n",
+      "strong multicollinearity or other numerical problems.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = df[['distance','rating']]\n",
+    "x = sm.add_constant(x) # adding a constant\n",
+    "lin_reg = sm.OLS(y,x)\n",
+    "model = lin_reg.fit()\n",
+    "print_model = model.summary()\n",
+    "print(print_model)"
+   ]
   },
   {
    "cell_type": "code",
