--- a/notebooks/yelp_foursquare_EDA.ipynb
+++ b/notebooks/yelp_foursquare_EDA.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#EBIKES DATAFRAME"
+    "#EBIKES DATAFRAME\n",
+    "\n",
+    "Using the same code as in the ciy_bikes.ipynb get the vancouver_networks_stations dataframe"
    ]
   },
   {
@@ -210,7 +212,7 @@
     }
    ],
    "source": [
-    "#Testing to see if get request works\n",
+    "#first testing to see if get request works before I use the API calls\n",
     "radius_meters = 1000\n",
     "url = url = \"https://api.foursquare.com/v3/places/search\"\n",
     "four_square_api_key = os.environ['FOURSQUARE_API_KEY']\n",
@@ -374,6 +376,13 @@
    "source": [
     "df = pd.DataFrame(fsq_json['results'])\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the vancouver_network_stations dataframe above iterate through all stations using the longitude and latitude to get the POI details from the foursquare API"
    ]
   },
   {
@@ -1174,7 +1183,8 @@
     "headers = {\n",
     "    \"Authorization\": f\"Bearer {api_key}\"\n",
     "}\n",
-    "    \n",
+    "\n",
+    "#As with foursquare iterate through vancouver_network_stations dataframe getting L & L and getting POI details\n",
     "for index, row in vancouver_network_stations.iterrows():\n",
     "    params = {\n",
     "        \"latitude\": row['latitude'],\n",
@@ -1809,6 +1819,7 @@
     }
    ],
    "source": [
+    "#getting dictionary values from dataframe\n",
     "yelp_df['category'] = df['categories'].apply(lambda x: [a['alias'] for a in x][0])\n",
     "yelp_df['category'] = yelp_df['category']\n",
     "yelp_parsed = yelp_df[['station_id', 'name', 'category', 'distance', 'rating', 'price']]\n",
@@ -2377,7 +2388,7 @@
     }
    ],
    "source": [
-    "#Yelp top 10\n",
+    "#Yelp top 10 for only with more than 1000 reviews\n",
     "yelp_parsed = yelp_df[['station_id', 'name', 'category', 'distance', 'review_count', 'rating', 'price']]\n",
     "yelp_sorted = yelp_parsed[yelp_parsed['review_count'] > 1000].sort_values(by='rating', ascending=False)\n",
     "top_10 = yelp_sorted.drop_duplicates(subset=['name'])\n",
